Fix line number spacing

--- a/styles/line-numbers.less
+++ b/styles/line-numbers.less
@@ -43,7 +43,7 @@
 		font-feature-settings: 'tnum' on;
 		font-size: .75em;
 		font-weight: 500;
-		line-height: auto;
+		line-height: 2em;
 		margin: 0;
 		opacity: 1;
 	  padding: 0 0 0 2em;
